// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQDnkz2ITPvI8G1moXAzIx2cqfvraIoKjPwxfef3vgB7UzKH"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBiRTyydpYWWkWENi6rTO3egFvBEJS06pzzz-zMrsy4ntII"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDnkz2ITPvI8G1moXAzIx2cqfvraIoKjPwxfef3vgB7UzKH",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18382n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDnkz2ITPvI8G1moXAzIx2cqfvraIoKjPwxfef3vgB7UzKH",
            "to": "kQBiRTyydpYWWkWENi6rTO3egFvBEJS06pzzz-zMrsy4ntII",
            "type": "internal",
            "value": 9965605000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDnkz2ITPvI8G1moXAzIx2cqfvraIoKjPwxfef3vgB7UzKH",
          "to": "kQBiRTyydpYWWkWENi6rTO3egFvBEJS06pzzz-zMrsy4ntII",
          "type": "internal",
          "value": 9965605000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17283n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBiRTyydpYWWkWENi6rTO3egFvBEJS06pzzz-zMrsy4ntII",
            "to": "kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk",
            "type": "internal",
            "value": 9937492000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBiRTyydpYWWkWENi6rTO3egFvBEJS06pzzz-zMrsy4ntII",
          "to": "kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk",
          "type": "internal",
          "value": 9937492000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17211n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk",
            "to": "kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk",
            "type": "internal",
            "value": 9909443000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk",
          "to": "kQAKnpSSxVjC6-eDzrZ4QXCs04e1QLonhEwKYuJ41SOcfvtk",
          "type": "internal",
          "value": 9909443000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4825n,
      },
    ],
  },
]
`;
